# G-EDF

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  package.xml
config/: college.yaml  config.yaml  go2.yaml  mai.yaml  reconstruction.yaml
config/rviz/: college.rviz  mai.rviz
docs/: index.html  script.js  style.css
include/: binary_exporter.hpp  config_loader.hpp  csv_exporter.hpp  cube_manager.hpp  edt_generator.hpp  gaussian_trainer.hpp  pointcloud_loader.hpp
include/db_tsdf/: gaussian_cube.hpp  grid_16.hpp  grid_32.hpp  tsdf3d_16.hpp  tsdf3d_32.hpp  voxel_cube.hpp
include/mesh/: vtk_mesh_extractor.hpp
include/solver/: solver.hpp
launch/: mapper_college_launch.py  mapper_launch.py
scripts/: gdf1_loader_reference.py
src/: db_tsdf_node.cpp  evaluate_gdf1.cpp  gaussian_to_ply.cpp  main.cpp  mapper_node_16.cpp  mapper_node_32.cpp  reconstruct.cpp  test_gaussian.cpp  vtk_mesh_extractor.cpp
